[project]
name = "hackernews-dl"
version = "0.1.0"
description = "Simple Python script to download Hackernews items to a SQL database"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.11",
    "sqlmodel>=0.0.22",
    "tqdm>=4.67.1",
    "typer>=0.15.1",
]

[project.scripts]
hackernews-dl = "hackernews_dl.download:run"

[tool.ruff]
line-length = 100